Improvements to search, add and delete of items
Manually removed jQuery 1.8.0 due to bugs with IE10, manually added
jQuery 1.8.1 until release on NuGet.
Updated the Facebook Package.

--- a/InTheBoks.Web/Content/Site.css
+++ b/InTheBoks.Web/Content/Site.css
@@ -719,10 +719,11 @@ ul {
     padding: 0;
 }
 
-button {
+button, input[type='submit'] {
     font-size: 1.2em;
     padding: 7px 12px 7px 12px;
 }
+
 
 .settings {
     width: 100%;
