Facebook Network Verification
- Verifies if the user is able to authenticate with Facebook. Displays
alert if not. Need to make the UI update instead of alert.
- Added a "Back to top" link on the bottom of the page.

--- a/InTheBoks.Web/Content/Site.css
+++ b/InTheBoks.Web/Content/Site.css
@@ -100,6 +100,11 @@ header {
     clear: both;
 }
 
+.backToTop {
+    font-size: 1.2em;
+    padding-left: 50px;
+}
+
 #listOptions {
     position: absolute;
     color: black;
