--- a/InTheBoks.Web/Views/Shared/_Layout.cshtml
+++ b/InTheBoks.Web/Views/Shared/_Layout.cshtml
@@ -529,6 +529,8 @@ Donations are another way to support us, please click the button below to give a
                 </h1>
         </div>
 
+        
+
     <div class="introduction" style="clear: both;">
 
         <a href="/">Home</a> // 
@@ -537,6 +539,8 @@ Donations are another way to support us, please click the button below to give a
         <a href="http://www.facebook.com/pages/Boks-Organize-Your-Stuff/270278054270">Facebook</a> // 
         <a href="http://twitter.com/InTheBoks/">Twitter</a> // 
         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=10337833">Donate</a>
+
+        <a class="backToTop" href="#">Back to top</a>
     </div>
         </div>
 
