--- a/InTheBoks.Web/Content/Site.css
+++ b/InTheBoks.Web/Content/Site.css
@@ -89,6 +89,24 @@ header {
     min-width: 480px;
 }
 
+#initializingBox {
+    padding-top: 24px;
+}
+
+#updateNotification {
+    z-index: 50000;
+    top: 0px;
+    width: 350px;
+    background-color: black;
+    color: white;
+    position: absolute;
+    margin: auto;
+    left:0; right:0;
+    top:0; bottom:0;
+    padding: 40px;
+    display: none;
+}
+
 #AppContainer {
     margin: 0;
     padding: 0px;
