--- a/InTheBoks.Web/Content/app.css
+++ b/InTheBoks.Web/Content/app.css
@@ -242,7 +242,8 @@ div.wrapper {
 
 input {
     font-size: 1.5em;
-    line-height: 2em;
+    padding: 3px;
+    /*line-height: 2em;*/
 }
 
     input[type='search'] {
