Minor graphical updates
- New favicon with higher resolution.
- New background to the catalogs menu.
- Added the API documentation page.

--- a/InTheBoks.Web/Content/app.css
+++ b/InTheBoks.Web/Content/app.css
@@ -325,6 +325,10 @@ p.description_content {
 	width: 150px;
 	overflow: auto;
 	float: left;
+	background-image: url('/Content/menu_bg.png');
+    background-repeat: repeat-y;
+    background-position: top right;
+    
 }
 
 #content #friends {
