--- a/InTheBoks.Web/Views/Shared/_Layout.cshtml
+++ b/InTheBoks.Web/Views/Shared/_Layout.cshtml
@@ -15,6 +15,24 @@
     <link rel="apple-touch-icon" href="~/Content/intheboks_72.png" />
     <link rel="apple-touch-icon" href="~/Content/intheboks_114.png" sizes="114x114" />
 
+
+    <meta name="application-name" content="InTheBoks"/> 
+    <meta name="msapplication-tooltip" content="Start InTheBoks Web App"/>
+    <meta name="msapplication-TileImage" content="/Content/intheboks_144.png"/>
+    <meta name="msapplication-TileColor" content="white"/>
+    <meta name="msapplication-window" content="width=1200;height=700" />
+    <meta name="msapplication-starturl" content="/" />
+
+    <meta name="msapplication-task"
+    content="name=Search;
+    action-uri=/#Search;
+    icon-uri=/Content/icons/jump_search.ico"/>
+
+    <meta name="msapplication-task"
+    content="name=Catalogs;
+    action-uri=/#Catalogs;
+    icon-uri=/Content/icons/jump_settings.ico"/>
+
     <link rel="shortcut icon" href="/favicon.ico" />
 
     @*@Styles.Render("~/Content/themes/base/css", "~/Content/css")*@
@@ -51,7 +69,7 @@
             <div id="auth-status">
 
                 <span class="authenticated">
-                    <input type="search" id="filterSearch" style="display: none; width: 0px; float: left; height: 32px; margin-right: 10px; margin-top: 5px; font-size: 1.2em; padding-left: 5px;" placeholder="Filter Your Items" />
+                    <input type="search" id="filterSearch" class="input-medium search-query" style="display: none; width: 0px; float: left; height: 32px; margin-right: 10px; margin-top: 5px; font-size: 1.2em; padding-left: 5px;" placeholder="Filter Your Items" />
                     <img src="../../Content/icons/white/search.png" onclick="ToggleFilter();" title="Filter" class="action big"
                         style="margin-top: 4px; margin-right: 10px; float: left;" />
 
@@ -78,15 +96,17 @@
                             <li><a href="#"><i class="icon-pencil"></i> Profile</a></li>
                             <li><a href="#"><i class="icon-cog"></i> Settings</a></li>
                             <li><a href="#"><i class="icon-search"></i> Search</a></li>
+                              <li class="divider"></li>
+                              <li><a href="#"><i class="icon-download"></i> Go Offline</a></li>
+                            <li class="divider"></li>
+                              <li><a href="#"><i class="icon-info-sign"></i> About</a></li>
+                              <li><a href="/Help" target="_blank"><i class="icon-book"></i> Documentation</a></li>
+
                             @*<li><a href="#"><i class="icon-trash"></i> Delete</a></li>
                             <li><a href="#"><i class="icon-ban-circle"></i> Ban</a></li>*@
                             <li class="divider"></li>
                             @*<li><a href="#"><i class="i"></i> Make admin</a></li>*@
-                              <li>
-
-                                  <a href="#" id="auth-logoutlink" data-bind="click: Logout">@Text.Logout</a>
-
-                              </li>
+                              <li><a href="#" id="auth-logoutlink" data-bind="click: Logout"><i class="icon-off"></i> @Text.Logout</a></li>
                           </ul>
                         </div>
 
@@ -185,6 +205,7 @@
                         </li>
                     </ul>
                 </div>
+
             </div>
 
             <div id="friends" class="stretch">
